welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:-6: error: Missing closing brace `}' assumed here
try {
^inOrderEqual:1: error: expected class or object definition
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
^